# SmartHouse

./: CMakeLists.txt  main.cpp
Texts/: Config  Energy_Counter_Devices  Input_Devices  Temp_Devices
